<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/header_divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_title"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/headline_section"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="@color/pink"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toTopOf="parent" />

    </LinearLayout>

    <ImageView
        android:id="@+id/headline_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/headline_image_content_desc"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/outcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:textColor="@color/black"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"/>

    <Button
        android:id="@+id/headline_choice_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/headline_choice_1_content_desc"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/headline_choice_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/headline_choice_2_content_desc"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/headline_choice_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/headline_choice_3_content_desc"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/grey"
        android:contentDescription="@string/skip_button_content_desc"
        android:text="@string/skip_button_message"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
