<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/headline_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/correct_text">

        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/headline_card"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/headline_image"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:layout_gravity="top"
                    android:contentDescription="@string/headline_image_content_desc"
                    tools:src="@drawable/broken_image" />

                <TextView
                    android:id="@+id/correct_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Canada tightens millionaire visa scheme over corruption concerns" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/read_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/read_article"
            android:text="@string/read_article"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/headline_card"
            app:layout_constraintTop_toBottomOf="@+id/headline_card"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/next_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/grey"
            android:contentDescription="@string/skip_button_content_desc"
            android:text="@string/next_question"
            android:height="55dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
