<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.adrian.newsgame.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/questionPage"
            app:layout_constraintEnd_toEndOf="@+id/questionPage"
            app:layout_constraintStart_toStartOf="@+id/questionPage"
            app:layout_constraintTop_toTopOf="@+id/questionPage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/questionPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:divider="@drawable/header_divider"
                android:orientation="horizontal"
                android:showDividers="middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/guess_headline_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_title"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/headline_section"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:background="@color/pink"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Category" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/headline_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/headline_image_content_desc"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/headline_choice_1"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:layout_constraintVertical_bias="0.19999999"
                tools:src="@drawable/broken_image" />

            <TextView
                android:id="@+id/points_earned"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/headline_choice_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headline_image"
                tools:text="Points Earned: 50" />

            <Button
                android:id="@+id/headline_choice_1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/headline_choice_1_content_desc"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/headline_choice_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Headline Guess 1" />

            <Button
                android:id="@+id/headline_choice_2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/headline_choice_2_content_desc"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/headline_choice_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Headline Guess 2" />

            <Button
                android:id="@+id/headline_choice_3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/headline_choice_3_content_desc"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/skip_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Headline Guess 3" />

            <Button
                android:id="@+id/skip_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/grey"
                android:contentDescription="@string/skip_button_content_desc"
                android:text="@string/skip_button_message"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
